[package]
name = "wion"
publish = false
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Wasm Interface Object Notation"
repository = "https://github.com/oovm/wion"
documentation = "https://docs.rs/wion"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["package.json", "tests/**"]

[dependencies]
serde = { version = "1.0.197", optional = true }

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
